2014-01-21  Charlie Zender  <zender@uci.edu>

	* Performed autoreconf --force to update config.{sub,guess} for	Debian AArch64

	* Add nces.1 manpage to automake instructions

2014-01-20  Pedro Vicente  <pvicente@uci.edu>

	* Add ncks regressions #81,#82,#83,84 --cnk_dmn full names

2014-01-17  Charlie Zender  <zender@uci.edu>

	* Turn-off shuffle when uncompressing otherwise chunking requests may fail

	* Add nco_def_var_fletcher32() wrapper and stub

2014-01-17  Pedro Vicente  <pvicente@uci.edu>

	* Add ncks regressions #83 Chunking and shuffle filter

2014-01-16  Pedro Vicente  <pvicente@uci.edu>

	* Add test data for --cnk_dmn full names in_grp_3.cdl

	* Add ncks regression #80 Chunking and uncompression (-L 0)

	* Add utility functions nco_strrstr(), nco_is_fll_pth()

2014-01-16  Charlie Zender  <zender@uci.edu>

	* Fix to allow uncompressing files at the same time as chunking files

2014-01-14  Pedro Vicente  <pvicente@uci.edu>

	* Add test data for -X option in in_grp_3.cdl

2014-01-13  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.1 release procedure:
 	Changes since nco-4_4_0: -X, cnk?, hsh?
	cd ~/nco;cvs tag -d nco-4_4_1;cvs tag -d nco-4_4_1-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.1 release"
	cvs tag -c nco-4_4_1;cvs tag -c nco-4_4_1-1

2014-01-12  Pedro Vicente  <pvicente@uci.edu>

	* -X support for associated variables located anywhere in file hierarchy

	* Add ncks regression #70: -X for associated variables located anywhere in file hierarchy

2014-01-09  Charlie Zender  <zender@uci.edu>

	* Fix cnk lfp map bug, re-release 4.4.0

2014-01-08  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.0 release procedure:
 	Changes since nco-4_3_9: hash, dyn mmr, ncra.c fixes, hdf4, autocnv, hdn, cnk
	cd ~/nco;cvs tag -d nco-4_4_0;cvs tag -d nco-4_4_0-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.0 release"
	cvs tag -c nco-4_4_0;cvs tag -c nco-4_4_0-1
