@@ -1,5 +1,9 @@
 2014-01-21  Charlie Zender  <zender@uci.edu>
 
+	* ncgen breaks on hidden attributes in CDL with netCDF 4.1.1- (201111)
+	Hence NCO 4.4.0 has many regressions on older netCDF
+	Need to move in_grp.cdl hidden attributes group g13 into its own "safe" file
+
 	* Performed autoreconf --force to update config.{sub,guess} for	Debian AArch64
 
 	* Add nces.1 manpage to automake instructions
